# remembrancer

./: .gitignore  README.md  create-update.sh  index.html  package-lock.json  package.json  update.json  update.tmpl.json  updater.json
.github/workflows/: build_and_upload.yml  build_upload_linux.yml  release-upload.yml  release.yml  upload-artifacts.yml  upload.yml
ci/: attachBinariesToRelease.mjs  create-update.sh  get-previous-tag.mjs  release.sh
linux-x86_64/: v1.6.23.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Base64.svelte  Clock.svelte  Countdown.svelte  NotificationButton.svelte  Version.svelte
